crates/vaab-types/tests/snapshots/errors__a_changing_variable_assigned_inside_a_task.snap
---
source: crates/vaab-types/tests/errors.rs
expression: "errors(\"let changing total = 0\\nlet job = start { total = 1 }\\n\")"
---
[changing-captured-by-task] Error: `total` can change, so a task cannot use it.
   ╭─[ example.vaab:2:19 ]
   │
 1 │ let changing total = 0
   │              ──┬──  
   │                ╰──── `total` is declared `changing` here
 2 │ let job = start { total = 1 }
   │                   ──┬──  
   │                     ╰──── this task uses `total`, which lives outside it
   │ 
   │ Help: use `Shared` instead: `let total = Shared.new(...)`, and change it inside the task with `total.update(value -> ...)`
   │ 
   │ Note: two tasks could change `total` at the same moment, and then neither would see what the other did; if the task only needs the value `total` holds right now, copy it into a fixed name first and use that
───╯
