crates/vaab-types/tests/snapshots/errors__a_condition_that_is_not_a_bool.snap
---
source: crates/vaab-types/tests/errors.rs
assertion_line: 346
expression: "errors(\"let count = 1\\nif count { print(\\\"yes\\\") }\\n\")"
---
[condition-not-bool] Error: a condition has to be a Bool
   ╭─[ example.vaab:2:4 ]
   │
 2 │ if count { print("yes") }
   │    ──┬──  
   │      ╰──── this is Int
   │ 
   │ Help: compare it, as in `count > 0`
   │ 
   │ Note: Vaab has no truthiness: only `yes` and `no` choose a branch
───╯
